--
--Copyright (c) 2016, 2017 Dimitrios Bliamplias
--
--Permission is hereby granted, free of charge, to any person obtaining a copy
--of this software and associated documentation files (the "Software"), to deal
--in the Software without restriction, including without limitation the rights
--to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
--copies of the Software, and to permit persons to whom the Software is
--furnished to do so, subject to the following conditions:
--
--The above copyright notice and this permission notice shall be included in
--all copies or substantial portions of the Software.
--
--THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
--IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
--FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
--AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
--LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
--OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
--SOFTWARE.
--

name:               elastic-rolling-restart
version:            0.2.0.0
license:            MIT
license-file:       license
extra-source-files: readme.rst changelog.rst
copyright:          Copyright (c) 2016, 2017 Dimitrios Bliamplias
author:             Dimitrios Bliamplias <bl.dimitris@gmail.com>
maintainer:         Dimitrios Bliamplias <bl.dimitris@gmail.com>
build-type:         Simple
cabal-version:      >=1.10
category:           Administration System Elasticsearch RollingRestart
synopsis:           Tool to perform rolling-restarts on Elasticsearch clusters
description:
  A complete Elasticsearch cluster restart may be required in various cases.
  Some of the most common cases are upgrading the Elasticsearch version of the
  cluster, or performing maintenance tasks to the elasticsearch servers itself
  (such as hardware, or OS related tasks), Also, for elasticsearch setups that
  are based on custom plugins to enhance their core functionality, such as
  analyzers, custom scripts, etc, a full cluster restart may be required even
  for a single plugin update.
  .
  Performing such tasks often, and for many different clusters can become quite
  a pain in the administrator's day-to-day operations. The current tool aims to
  automate the task of performing a rolling cluster restart, by allowing a
  whole Elasticsearch cluster to be restarted - keeping it online and
  operational with no downtime for end users, by taking nodes offline one a
  time. It implements the common elasticsearch `Rolling Restart`_ algorithm.
  .
  See also,
    https://elastic.co/guide/en/elasticsearch/guide/1.x/_rolling_restarts.html

source-repository head
  type: git
  location: https://github.com/dblia/elastic-rolling-restart.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Elastic.RollingRestart.Client
    Elastic.RollingRestart.Constants
    Elastic.RollingRestart.OptsParser
    Elastic.RollingRestart.Utils
    Elastic.RollingRestart.Utils.Curl
    Elastic.RollingRestart.Utils.JData.ClusterInfo
    Elastic.RollingRestart.Utils.JData.NodesInfo
    Elastic.RollingRestart.Utils.JData.ShardAlloc
    Elastic.RollingRestart.Utils.Process
  default-language:
    Haskell2010
  build-depends:
      base                 >= 4.6  && < 4.7
    , aeson                >= 0.7  && < 0.8
    , bytestring           >= 0.10 && < 0.11
    , containers           >= 0.5  && < 0.6
    , dns                  >= 1.3  && < 1.4
    , curl                 >= 1.3  && < 1.4
    , MissingH             >= 1.2  && < 1.3
    , optparse-applicative >= 0.10 && < 0.11
    , process              >= 1.1  && < 1.2
    , text                 >= 0.11 && < 0.12
    , split                >= 0.2  && < 0.3
  ghc-options:
    -Wall

executable rolling-restart
  hs-source-dirs:
    executables/
  main-is:
    Main.hs
  default-language:
    Haskell2010
  build-depends:
    -- same dependencies as the library (no need for versions)
      base
    , curl
    , elastic-rolling-restart
    , split
  ghc-options:
    -Wall
